Made changes to deploy script to use yarn

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,9 @@ jobs:
 
       - name: Install and Build 🔧
         run: |
-          npm install
-          npm run-script build
+          npm install yarn
+          yarn
+          yarn run build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3
