--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-image": "^2.4.7",
     "gatsby-link": "^2.2.27",
     "gatsby-plugin-emotion": "^4.1.18",
+    "gatsby-plugin-gdpr-cookies": "^1.0.7",
     "gatsby-plugin-local-search": "^1.1.1",
     "gatsby-plugin-manifest": "^2.2.33",
     "gatsby-plugin-material-ui": "^2.1.9",
@@ -46,6 +47,7 @@
     "match-all": "^1.2.5",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-cookie-consent": "^5.1.2",
     "react-dom": "^16.12.0",
     "react-feather": "^2.0.3",
     "react-github-btn": "^1.1.1",
